--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.81"
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tiny_http = "0.12.0"
 xml-rs = "0.8.20"
